--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <script>
+    alert('Brought to you by Treme ;)')
+    </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FN7LEVWXD"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
