--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=http://tughv1.vercel.app'>
+  <meta http-equiv='refresh' content='0; URL=https://tughv1.vercel.app'>
 </head>
